Kubernetes/windpowerplatforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: windpowerplatformnpservice-srv
spec:
  type: NodePort
  selector:
    app: windpowerplatformservice
  ports:
    - name: windpowerplatformservice
      protocol: TCP
      port: 80
      targetPort: 80
