Kubernetes/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: wpp.com
      http:
        paths:
          - path: /api/windpowerplatforms
            pathType: Prefix
            backend:
              serviceName: windpowerplatforms-clusterip-srv
              servicePort: 80
          - path: /api/c/windpowerplatforms
            pathType: Prefix
            backend:
              serviceName: commands-clusterip-srv
              servicePort: 80
